fix: correct gap after header in css

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -12,7 +12,7 @@
   justify-content: center;
   align-items: center;
   transition: background-position 0.5s ease-out;
-  margin-bottom: 5.875rem;
+  margin-bottom: 3.375rem;
   grid-area: header;
 }
 
